--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.16.4",
     "netlify-lambda": "^1.4.3",
     "serverless-http": "^1.9.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "scripts": {
